{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 1471,
  "lineage": "b04315d7-1b7b-3dcb-fd7c-b91a7e8a2e7c",
  "resources": [
    {
      "module": "module.asg",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:129294606460:targetgroup/Coalfire-target-group/59915dfb4892bfa1",
            "arn_suffix": "targetgroup/Coalfire-target-group/59915dfb4892bfa1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:129294606460:targetgroup/Coalfire-target-group/59915dfb4892bfa1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Coalfire-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Coalfire-tg",
              "env": "dev-env"
            },
            "tags_all": {
              "Name": "Coalfire-tg",
              "env": "dev-env"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0616c737b453b077e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08e592fbb0f535224",
            "arn": "arn:aws:ec2:eu-west-1:129294606460:instance/i-063dfbb229c718f92",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-063dfbb229c718f92",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "RedHatVM",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eb77ea0b0e046cb1",
            "private_dns": "ip-10-1-1-22.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.22",
            "public_ip": "18.201.63.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-059a46497e1c9d0a6",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0423bebecbf27620d",
            "tags": {
              "Name": "Coalfire-ec2",
              "env": "dev-env"
            },
            "tags_all": {
              "Name": "Coalfire-ec2",
              "env": "dev-env"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-059ead27069dd897e"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.sg-servers",
            "module.vpc.aws_subnet.public-eu-west-1b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:129294606460:loadbalancer/app/Coalfire-load-balancer/de497ecb5cfc5f35",
            "arn_suffix": "app/Coalfire-load-balancer/de497ecb5cfc5f35",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Coalfire-load-balancer-1366358043.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:129294606460:loadbalancer/app/Coalfire-load-balancer/de497ecb5cfc5f35",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Coalfire-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0810d70428a3d5d4e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0423bebecbf27620d"
              },
              {
                "subnet_id": "subnet-0565b68e7602525c0"
              }
            ],
            "subnets": [
              "subnet-0423bebecbf27620d",
              "subnet-0565b68e7602525c0"
            ],
            "tags": {
              "Name": "Coalfire-lb",
              "env": "dev-env"
            },
            "tags_all": {
              "Name": "Coalfire-lb",
              "env": "dev-env"
            },
            "vpc_id": "vpc-0616c737b453b077e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.sg.aws_security_group.sg-LB01",
            "module.vpc.aws_subnet.public-eu-west-1a",
            "module.vpc.aws_subnet.public-eu-west-1b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:129294606460:listener/app/Coalfire-load-balancer/de497ecb5cfc5f35/65f7a703307a6368",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:129294606460:targetgroup/Coalfire-target-group/59915dfb4892bfa1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:129294606460:listener/app/Coalfire-load-balancer/de497ecb5cfc5f35/65f7a703307a6368",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:129294606460:loadbalancer/app/Coalfire-load-balancer/de497ecb5cfc5f35",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.asg.aws_lb_target_group.tg",
            "module.lb.aws_lb.alb",
            "module.sg.aws_security_group.sg-LB01",
            "module.vpc.aws_subnet.public-eu-west-1a",
            "module.vpc.aws_subnet.public-eu-west-1b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ea8d567443047ee",
            "domain": "vpc",
            "id": "eipalloc-00ea8d567443047ee",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-246-69-25.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.246.69.25",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Coalfire-eip",
              "env": "dev-env"
            },
            "tags_all": {
              "Name": "Coalfire-eip",
              "env": "dev-env"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ea8d567443047ee",
            "association_id": "eipassoc-02c2110a2010a8457",
            "connectivity_type": "public",
            "id": "nat-0f4ef6bda77b7ab5f",
            "network_interface_id": "eni-0b397a087a9ee1241",
            "private_ip": "10.1.0.50",
            "public_ip": "54.246.69.25",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0565b68e7602525c0",
            "tags": {
              "Name": "Coalfire-nat",
              "env": "dev-env"
            },
            "tags_all": {
              "Name": "Coalfire-nat",
              "env": "dev-env"
            }
          },
          "dependencies": [
            "module.nat.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public-eu-west-1a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:129294606460:route-table/rtb-08ca8d9debc894bc1",
            "id": "rtb-08ca8d9debc894bc1",
            "owner_id": "129294606460",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f4ef6bda77b7ab5f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Coalfire-private",
              "env": "dev-env"
            },
            "tags_all": {
              "Name": "Coalfire-private",
              "env": "dev-env"
            },
            "timeouts": null,
            "vpc_id": "vpc-0616c737b453b077e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat.aws_eip.eip",
            "module.nat.aws_nat_gateway.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public-eu-west-1a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:129294606460:route-table/rtb-072cbd3a58865c101",
            "id": "rtb-072cbd3a58865c101",
            "owner_id": "129294606460",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0898a649533b238b2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Coalfire-public",
              "env": "dev-env"
            },
            "tags_all": {
              "Name": "Coalfire-public",
              "env": "dev-env"
            },
            "timeouts": null,
            "vpc_id": "vpc-0616c737b453b077e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-eu-west-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ff2a968177b65cc",
            "route_table_id": "rtb-08ca8d9debc894bc1",
            "subnet_id": "subnet-0597a9e61e92c95d7"
          },
          "dependencies": [
            "module.nat.aws_eip.eip",
            "module.nat.aws_nat_gateway.nat",
            "module.nat.aws_route_table.private",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.private-eu-west-1a",
            "module.vpc.aws_subnet.public-eu-west-1a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-eu-west-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077bfe1dc742f966e",
            "route_table_id": "rtb-08ca8d9debc894bc1",
            "subnet_id": "subnet-048721d39c7279f50"
          },
          "dependencies": [
            "module.nat.aws_eip.eip",
            "module.nat.aws_nat_gateway.nat",
            "module.nat.aws_route_table.private",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.private-eu-west-1b",
            "module.vpc.aws_subnet.public-eu-west-1a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-eu-west-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8a1c1e627515a52",
            "route_table_id": "rtb-072cbd3a58865c101",
            "subnet_id": "subnet-0565b68e7602525c0"
          },
          "dependencies": [
            "module.nat.aws_route_table.public",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public-eu-west-1a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-eu-west-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030be66f2e3991a22",
            "route_table_id": "rtb-072cbd3a58865c101",
            "subnet_id": "subnet-0423bebecbf27620d"
          },
          "dependencies": [
            "module.nat.aws_route_table.public",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public-eu-west-1b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:129294606460:security-group/sg-0810d70428a3d5d4e",
            "description": "Coalfire-sg-lb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0810d70428a3d5d4e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MyHomePage",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Coalfire-sg-lb",
            "name_prefix": "",
            "owner_id": "129294606460",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Coalfire-sg-lb",
              "env": "dev-env"
            },
            "tags_all": {
              "Name": "Coalfire-sg-lb",
              "env": "dev-env"
            },
            "timeouts": null,
            "vpc_id": "vpc-0616c737b453b077e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:129294606460:security-group/sg-059ead27069dd897e",
            "description": "Coalfire-sg-servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-059ead27069dd897e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MyHomePage",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Coalfire-sg-servers",
            "name_prefix": "",
            "owner_id": "129294606460",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Coalfire-sg-servers",
              "env": "dev-env"
            },
            "tags_all": {
              "Name": "Coalfire-sg-servers",
              "env": "dev-env"
            },
            "timeouts": null,
            "vpc_id": "vpc-0616c737b453b077e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:129294606460:internet-gateway/igw-0898a649533b238b2",
            "id": "igw-0898a649533b238b2",
            "owner_id": "129294606460",
            "tags": {
              "Name": "Coalfire-igw",
              "env": "dev-env"
            },
            "tags_all": {
              "Name": "Coalfire-igw",
              "env": "dev-env"
            },
            "vpc_id": "vpc-0616c737b453b077e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-eu-west-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:129294606460:subnet/subnet-0597a9e61e92c95d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0597a9e61e92c95d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "129294606460",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Coalfire-subnet",
              "env": "dev-env3"
            },
            "tags_all": {
              "Name": "Coalfire-subnet",
              "env": "dev-env3"
            },
            "vpc_id": "vpc-0616c737b453b077e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-eu-west-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:129294606460:subnet/subnet-048721d39c7279f50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048721d39c7279f50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "129294606460",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Coalfire-subnet",
              "env": "dev-env4"
            },
            "tags_all": {
              "Name": "Coalfire-subnet",
              "env": "dev-env4"
            },
            "vpc_id": "vpc-0616c737b453b077e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-eu-west-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:129294606460:subnet/subnet-0565b68e7602525c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0565b68e7602525c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "129294606460",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Coalfire-subnet1",
              "env": "dev-env"
            },
            "tags_all": {
              "Name": "Coalfire-subnet1",
              "env": "dev-env"
            },
            "vpc_id": "vpc-0616c737b453b077e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-eu-west-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:129294606460:subnet/subnet-0423bebecbf27620d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0423bebecbf27620d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "129294606460",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Coalfire-subnet2",
              "env": "dev-env"
            },
            "tags_all": {
              "Name": "Coalfire-subnet2",
              "env": "dev-env"
            },
            "vpc_id": "vpc-0616c737b453b077e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:129294606460:vpc/vpc-0616c737b453b077e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-004f92b272c57a00c",
            "default_route_table_id": "rtb-0e15d4598362b69e1",
            "default_security_group_id": "sg-05cfe9478ed47dafd",
            "dhcp_options_id": "dopt-0f04f51e07432e425",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0616c737b453b077e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e15d4598362b69e1",
            "owner_id": "129294606460",
            "tags": {
              "Name": "Coalfire-vpc",
              "env": "dev-env"
            },
            "tags_all": {
              "Name": "Coalfire-vpc",
              "env": "dev-env"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}